[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/UIScenes/Assets/Level/BackGround.png" type="Texture" id=1]
[ext_resource path="res://Scenes/UIScenes/Assets/Buttons/blue_button03.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UIScenes/Assets/Buttons/blue_button05.png" type="Texture" id=3]
[ext_resource path="res://Scenes/UIScenes/Assets/Fonts/retro_gaming_10_OL.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/UIScenes/HeroMenu.gd" type="Script" id=5]
[ext_resource path="res://Scenes/UIScenes/Assets/Icons/Currency/hero_ticket.png" type="Texture" id=6]
[ext_resource path="res://Scenes/UIScenes/Assets/Fonts/retro_gaming_6_OL.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scenes/UIScenes/HeroInventory.gd" type="Script" id=8]
[ext_resource path="res://Scenes/UIScenes/Assets/Fonts/retro_gaming_7.tres" type="DynamicFont" id=9]
[ext_resource path="res://Scenes/UIScenes/Assets/Fonts/retro_gaming_5.tres" type="DynamicFont" id=10]
[ext_resource path="res://Scenes/UIScenes/Slot.gd" type="Script" id=11]
[ext_resource path="res://item_slot_default_background.png" type="Texture" id=12]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 64, 64 )

[node name="HeroMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="TopRow" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 20.0
rect_min_size = Vector2( 320, 20 )

[node name="HeroesText" type="Label" parent="TopRow"]
margin_right = 80.0
margin_bottom = 20.0
rect_min_size = Vector2( 80, 20 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 4 )
text = "Heroes"
align = 1
valign = 1

[node name="HeroTicketsIcon" type="TextureRect" parent="TopRow"]
margin_left = 84.0
margin_top = 6.0
margin_right = 92.0
margin_bottom = 14.0
rect_min_size = Vector2( 8, 8 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 6 )
expand = true

[node name="HeroTicketsDisplay" type="Label" parent="TopRow"]
margin_left = 96.0
margin_top = 6.0
margin_right = 146.0
margin_bottom = 14.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 7 )
valign = 1

[node name="TextureButton" type="TextureButton" parent="TopRow"]
visible = false
margin_left = 273.0
margin_top = 3.0
margin_right = 287.0
margin_bottom = 17.0
rect_min_size = Vector2( 14, 14 )
size_flags_horizontal = 10
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="TextureButton2" type="TextureButton" parent="TopRow"]
visible = false
margin_left = 273.0
margin_top = 3.0
margin_right = 287.0
margin_bottom = 17.0
rect_min_size = Vector2( 14, 14 )
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="TextureButton3" type="TextureButton" parent="TopRow"]
visible = false
margin_left = 273.0
margin_top = 3.0
margin_right = 287.0
margin_bottom = 17.0
rect_min_size = Vector2( 14, 14 )
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="TextureButton4" type="TextureButton" parent="TopRow"]
visible = false
margin_left = 273.0
margin_top = 3.0
margin_right = 287.0
margin_bottom = 17.0
rect_min_size = Vector2( 14, 14 )
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="TextureButton5" type="TextureButton" parent="TopRow"]
visible = false
margin_left = 273.0
margin_top = 3.0
margin_right = 287.0
margin_bottom = 17.0
rect_min_size = Vector2( 14, 14 )
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="Start" type="TextureButton" parent="TopRow"]
margin_left = 291.0
margin_top = 3.0
margin_right = 316.0
margin_bottom = 17.0
rect_min_size = Vector2( 25, 14 )
size_flags_horizontal = 10
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="TopRow/Start"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 10 )
text = "Start"
align = 1
valign = 1

[node name="Control" type="Control" parent="TopRow"]
margin_left = 320.0
margin_right = 320.0
margin_bottom = 20.0

[node name="SideMenu" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
rect_min_size = Vector2( 30, 180 )

[node name="Control" type="Control" parent="SideMenu"]
margin_right = 30.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="StatsMenuButton" type="TextureButton" parent="SideMenu"]
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_top = 24.0
margin_right = 30.0
margin_bottom = 52.0
rect_min_size = Vector2( 30, 28 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture_normal = ExtResource( 2 )
expand = true

[node name="StatsText" type="Label" parent="SideMenu/StatsMenuButton"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 9 )
text = "Stats"
align = 1
valign = 1

[node name="ItemMenuButton" type="TextureButton" parent="SideMenu"]
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_top = 56.0
margin_right = 30.0
margin_bottom = 84.0
rect_min_size = Vector2( 30, 28 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture_normal = ExtResource( 2 )
expand = true

[node name="ItemsText" type="Label" parent="SideMenu/ItemMenuButton"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 9 )
text = "Items"
align = 1
valign = 1

[node name="HeroMenuButton" type="TextureButton" parent="SideMenu"]
margin_top = 88.0
margin_right = 30.0
margin_bottom = 116.0
rect_min_size = Vector2( 30, 28 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture_normal = ExtResource( 2 )
expand = true

[node name="HeroesText" type="Label" parent="SideMenu/HeroMenuButton"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 7 )
text = "Heroes"
align = 1
valign = 1

[node name="TextureButton4" type="TextureButton" parent="SideMenu"]
visible = false
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_top = 88.0
margin_right = 30.0
margin_bottom = 116.0
rect_min_size = Vector2( 30, 28 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture_normal = ExtResource( 2 )
expand = true

[node name="TextureButton5" type="TextureButton" parent="SideMenu"]
visible = false
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_top = 88.0
margin_right = 30.0
margin_bottom = 116.0
rect_min_size = Vector2( 30, 28 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture_normal = ExtResource( 2 )
expand = true

[node name="HeroInventory" type="Control" parent="."]
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="HeroInventory"]
margin_left = 192.0
margin_top = 24.0
margin_right = 310.0
margin_bottom = 171.0
color = Color( 0.996078, 0.858824, 0.533333, 1 )

[node name="ColorRect2" type="ColorRect" parent="HeroInventory"]
margin_left = 48.0
margin_top = 24.0
margin_right = 115.0
margin_bottom = 171.0
color = Color( 0.996078, 0.858824, 0.533333, 1 )

[node name="InventorySlots" type="GridContainer" parent="HeroInventory"]
margin_left = 198.0
margin_top = 34.0
margin_right = 304.0
margin_bottom = 164.0
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 5

[node name="Slot1" type="Panel" parent="HeroInventory/InventorySlots"]
margin_right = 18.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot2" type="Panel" parent="HeroInventory/InventorySlots"]
margin_left = 22.0
margin_right = 40.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot3" type="Panel" parent="HeroInventory/InventorySlots"]
margin_left = 44.0
margin_right = 62.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot4" type="Panel" parent="HeroInventory/InventorySlots"]
margin_left = 66.0
margin_right = 84.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot5" type="Panel" parent="HeroInventory/InventorySlots"]
margin_left = 88.0
margin_right = 106.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot6" type="Panel" parent="HeroInventory/InventorySlots"]
margin_top = 22.0
margin_right = 18.0
margin_bottom = 40.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot7" type="Panel" parent="HeroInventory/InventorySlots"]
margin_left = 22.0
margin_top = 22.0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot8" type="Panel" parent="HeroInventory/InventorySlots"]
margin_left = 44.0
margin_top = 22.0
margin_right = 62.0
margin_bottom = 40.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot9" type="Panel" parent="HeroInventory/InventorySlots"]
margin_left = 66.0
margin_top = 22.0
margin_right = 84.0
margin_bottom = 40.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot10" type="Panel" parent="HeroInventory/InventorySlots"]
margin_left = 88.0
margin_top = 22.0
margin_right = 106.0
margin_bottom = 40.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot11" type="Panel" parent="HeroInventory/InventorySlots"]
margin_top = 44.0
margin_right = 18.0
margin_bottom = 62.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot12" type="Panel" parent="HeroInventory/InventorySlots"]
margin_left = 22.0
margin_top = 44.0
margin_right = 40.0
margin_bottom = 62.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot13" type="Panel" parent="HeroInventory/InventorySlots"]
margin_left = 44.0
margin_top = 44.0
margin_right = 62.0
margin_bottom = 62.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot14" type="Panel" parent="HeroInventory/InventorySlots"]
margin_left = 66.0
margin_top = 44.0
margin_right = 84.0
margin_bottom = 62.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot15" type="Panel" parent="HeroInventory/InventorySlots"]
margin_left = 88.0
margin_top = 44.0
margin_right = 106.0
margin_bottom = 62.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot16" type="Panel" parent="HeroInventory/InventorySlots"]
margin_top = 66.0
margin_right = 18.0
margin_bottom = 84.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot17" type="Panel" parent="HeroInventory/InventorySlots"]
margin_left = 22.0
margin_top = 66.0
margin_right = 40.0
margin_bottom = 84.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot18" type="Panel" parent="HeroInventory/InventorySlots"]
margin_left = 44.0
margin_top = 66.0
margin_right = 62.0
margin_bottom = 84.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot19" type="Panel" parent="HeroInventory/InventorySlots"]
margin_left = 66.0
margin_top = 66.0
margin_right = 84.0
margin_bottom = 84.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot20" type="Panel" parent="HeroInventory/InventorySlots"]
margin_left = 88.0
margin_top = 66.0
margin_right = 106.0
margin_bottom = 84.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot21" type="Panel" parent="HeroInventory/InventorySlots"]
margin_top = 88.0
margin_right = 18.0
margin_bottom = 106.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot22" type="Panel" parent="HeroInventory/InventorySlots"]
margin_left = 22.0
margin_top = 88.0
margin_right = 40.0
margin_bottom = 106.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot23" type="Panel" parent="HeroInventory/InventorySlots"]
margin_left = 44.0
margin_top = 88.0
margin_right = 62.0
margin_bottom = 106.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot24" type="Panel" parent="HeroInventory/InventorySlots"]
margin_left = 66.0
margin_top = 88.0
margin_right = 84.0
margin_bottom = 106.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot25" type="Panel" parent="HeroInventory/InventorySlots"]
margin_left = 88.0
margin_top = 88.0
margin_right = 106.0
margin_bottom = 106.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot26" type="Panel" parent="HeroInventory/InventorySlots"]
margin_top = 110.0
margin_right = 18.0
margin_bottom = 128.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot27" type="Panel" parent="HeroInventory/InventorySlots"]
margin_left = 22.0
margin_top = 110.0
margin_right = 40.0
margin_bottom = 128.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot28" type="Panel" parent="HeroInventory/InventorySlots"]
margin_left = 44.0
margin_top = 110.0
margin_right = 62.0
margin_bottom = 128.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot29" type="Panel" parent="HeroInventory/InventorySlots"]
margin_left = 66.0
margin_top = 110.0
margin_right = 84.0
margin_bottom = 128.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="Slot30" type="Panel" parent="HeroInventory/InventorySlots"]
margin_left = 88.0
margin_top = 110.0
margin_right = 106.0
margin_bottom = 128.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="EquipSlots" type="GridContainer" parent="HeroInventory"]
margin_left = 56.0
margin_top = 30.0
margin_right = 74.0
margin_bottom = 162.0
custom_constants/vseparation = 20
custom_constants/hseparation = 0

[node name="EquipSlot1" type="Panel" parent="HeroInventory/EquipSlots"]
margin_right = 18.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="EquipSlot2" type="Panel" parent="HeroInventory/EquipSlots"]
margin_top = 38.0
margin_right = 18.0
margin_bottom = 56.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="EquipSlot3" type="Panel" parent="HeroInventory/EquipSlots"]
margin_top = 76.0
margin_right = 18.0
margin_bottom = 94.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="EquipSlot4" type="Panel" parent="HeroInventory/EquipSlots"]
margin_top = 114.0
margin_right = 18.0
margin_bottom = 132.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[connection signal="pressed" from="SideMenu/StatsMenuButton" to="." method="_on_StatsMenuButton_pressed"]
[connection signal="pressed" from="SideMenu/ItemMenuButton" to="." method="_on_ItemMenuButton_pressed"]
